# my-itau

./: .env.example  .gitignore  CLAUDE.md  README.md  itau_client.py  main.py  probe.py  pyproject.toml  requirements.txt  test_login.py
.claude/skills/itau-uy-api/: SKILL.md
.cursor/skills/itau-uy-api/: SKILL.md
my_itau/: cli.py  client.py  config.py  normalizers.py  server.py
